Atualização com todos os quartis funcionando e medianas mostrando no dashboard, além de um amém de brinde(que nossa apresentação seja ótima)

--- a/site/Boots/public/grafico-yoshi.html
+++ b/site/Boots/public/grafico-yoshi.html
@@ -10,6 +10,7 @@
     <!-- script do google charts -->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </head>
+<!-- haha ie ie -->
 
 <body onload="atualizarGrafico()">
     <div style="width:75%;">
