Dessa vez agora com os quartis bom

--- a/site/Boots/public/index.html
+++ b/site/Boots/public/index.html
@@ -108,23 +108,24 @@
                 <br> <br>
                 <div class="col-1"></div>
                 <div class="col-lg-2 col-4 ml-auto mr-auto">
-                    <img class="my-3 img-fluid rounded-circle" src="img/Andisu.jpg"
-                        alt="" style="width:60%"> <b>Anderson</b> <br>P.O
+                    <img class="my-3 img-fluid rounded-circle" src="img/Andisu.jpg" alt="" style="width:60%">
+                    <b>Anderson</b> <br>P.O
                 </div>
                 <div class="col-lg-2 col-4 ml-auto mr-auto">
-                    <img class="my-3 img-fluid rounded-circle" src="img/leo.jpeg"
-                        alt="" style="width:60%"> <b>Leonardo</b> <br> Scrum Master
+                    <img class="my-3 img-fluid rounded-circle" src="img/leo.jpeg" alt="" style="width:60%">
+                    <b>Leonardo</b> <br> Scrum Master
                 </div>
                 <div class="col-lg-2 col-4 ml-auto mr-auto">
-                    <img class="my-3 img-fluid rounded-circle" src="img/Isa.jpg" alt="" style="width:60%"><br> <b>Isabela</b> <br> Dev
+                    <img class="my-3 img-fluid rounded-circle" src="img/Isa.jpg" alt="" style="width:60%"><br>
+                    <b>Isabela</b> <br> Dev
                 </div>
                 <div class="col-lg-2 col-4 ml-auto mr-auto">
-                    <img class="my-3 img-fluid rounded-circle" src="img/mau.jpeg"
-                        alt="" style="width:60%"> <b>Maurício</b> <br> Dev
+                    <img class="my-3 img-fluid rounded-circle" src="img/mau.jpeg" alt="" style="width:60%">
+                    <b>Maurício</b> <br> Dev
                 </div>
                 <div class="col-lg-2 col-4 ml-auto mr-auto">
-                    <img class="my-3 img-fluid rounded-circle" src="img/will.jpg"
-                        alt="" style="width:60%"><br> <b>William</b> <br> Dev
+                    <img class="my-3 img-fluid rounded-circle" src="img/will.jpg" alt="" style="width:60%"><br>
+                    <b>William</b> <br> Dev
                 </div>
             </div>
         </div>
@@ -141,10 +142,12 @@
             <div class="row">
 
                 <div class="col-lg-12 ml-auto my-5">
-                    <p class="lead">Você sabia que de acordo com o Instituto Nacional de Pesquisas Espaciais (Inpe), 90%
+                    <p class="lead">
+                        <!-- Você sabia que de acordo com o Instituto Nacional de Pesquisas Espaciais (Inpe), 90%
                         dos casos, os alvos das queimadas são em áreas rurais, que incluem matas, plantações e
                         vegetações, por exemplo. O estado de São Paulo é o oitavo do
-                        Brasil em número de ocorrências. Visto isso, a SDPIAR desenvolveu um projeto para você que está
+                        Brasil em número de ocorrências. Visto isso,-->
+                        A SDPIAR desenvolveu um projeto para você que está
                         preocupado com a sua área rural pois, quando identificado um incêndio rural, a primeira coisa a
                         se fazer é entrar em contato com o
                         corpo de bombeiros, para que os profissionais cheguem rapidamente ao local e evitem o
@@ -152,7 +155,7 @@
                         celular e ligar para o corpo de bombeiros o fogo
                         já está se espalhando cada vez mais. Sendo assim nossa ideia é você não se preocupar mais com
                         isso pois nosso sistema vai estar encarregado de fazer isso por você. <br>
-                        Nosso sistema irá medir a temperatura do solo da sua área,
+                        Nosso sistema mede a temperatura do solo da sua área,
                         quando o sensor detectar que o solo está muito seco e quente em uma temperatura X,
                         acionará o irrigador para aliviar um pouco o estado que ele está evitando que
                         ocorra um incêndio. Caso ocorra de o solo estar muito seco e quente a ponto de pegar
@@ -160,9 +163,11 @@
                         lugar está o incêndio.
 
                     </p>
-                    <div class="text-center mt-4">
-                        <a class="btn btn-xl btn-outline-light text-dark" data-toggle="modal" data-target="#Site_modal">
-                            Saiba mais
+                    <div class="text-center mt-4 teste">
+                        <a class="btn btn-xl btn-outline-light" data-toggle="modal" data-target="#Site_modal">
+                            <span class="teste">
+                                Saiba mais
+                            </span>
                         </a>
                     </div>
                 </div>
@@ -280,7 +285,7 @@
                 <div class="col-md-4">
                     <h4 class="text-uppercase mb-4">Ainda ficou com dúvidas ?</h4>
                     <p class="lead mb-0">Mande uma
-                        <a href="#contato">mensagem </a>para nós.</p>
+                        <a href="#contato" class="rounded js-scroll-trigger">mensagem </a>para nós.</p>
                 </div>
             </div>
         </div>
@@ -386,15 +391,15 @@
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
 
-    
-<script type="text/javascript">
-    var vsid = "sa82978";
-    (function() { 
-    var vsjs = document.createElement('script'); vsjs.type = 'text/javascript'; vsjs.async = true; vsjs.setAttribute('defer', 'defer');
-     vsjs.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'www.virtualspirits.com/vsa/chat-'+vsid+'.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(vsjs, s);
-    })();
-   </script>
+
+    <script type="text/javascript">
+        var vsid = "sa82978";
+        (function () {
+            var vsjs = document.createElement('script'); vsjs.type = 'text/javascript'; vsjs.async = true; vsjs.setAttribute('defer', 'defer');
+            vsjs.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'www.virtualspirits.com/vsa/chat-' + vsid + '.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(vsjs, s);
+        })();
+    </script>
 
 </body>
 
