--- a/site/Boots/public/grafico.html
+++ b/site/Boots/public/grafico.html
@@ -193,7 +193,7 @@
                                         <input type="number" class="form-control" id="numero_area" name="numero_area"
                                             placeholder="1">
                                     </div>
-                                    <button type="button" class="btn btn-primary">Mostrar
+                                    <button type="button" id="botao_mudar_area" onclick="trocar_area()" class="btn btn-primary">Mostrar
                                         dados</button>
                                 </form>
 
