Selects das áreas do usuário e dos dados de determinada área salvos como procedimentos armazenados no SQL Server

--- a/site/Boots/public/grafico.html
+++ b/site/Boots/public/grafico.html
@@ -126,7 +126,7 @@
 
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal"
-                                    onclick="logoff()">
+                                    >
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Sair
                                 </a>
                             </div>
@@ -146,7 +146,9 @@
                                 <!-- Cabeçalho (Título) -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Gráfico</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">
+                                        Gráfico (Área <i id="area_atual">1</i>)
+                                    </h6>
                                 </div>
                                 <!-- Gráfico em si -->
                                 <div id="div_aguarde">Dados sendo obtidos...</div>
