--- a/site/Boots/public/grafico.html
+++ b/site/Boots/public/grafico.html
@@ -431,15 +431,12 @@
                     </div>
                 </div>
 
-                <div class="container-fluid">
+                <!-- <div class="container-fluid">
 
-                    <!-- Content Row -->
                     <div class="row">
 
-                        <!-- Content Column -->
                         <div class="col-lg-6 mb-4">
 
-                            <!-- Project Card Example -->
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
                                     <h6 class="m-0 font-weight-bold text-primary">Umidade diária</h6>
@@ -481,8 +478,6 @@
                         </div>
 
 
-                        <!-- Color System -->
-                        <!-- <div class="row"> -->
                         <div class="col-lg-3 mb-4 col-md-6 col-sm-6">
                             <div class="card bg-primary text-white shadow">
                                 <div class="card-body text-center">
@@ -515,8 +510,8 @@
                         </div>
                     </div>
 
+                </div> -->
                 </div>
-                <!-- </div> -->
 
                 <div class="container-fluid">
                     <div class="row">
