--- a/site/Boots/public/grafico.html
+++ b/site/Boots/public/grafico.html
@@ -94,7 +94,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span id="n_do_user" class="mr-2 d-none d-lg-inline text-gray-600 small"></span>
+                                <span id="n_do_user" class="mr-2 d-lg-inline text-gray-600 small">Alguma</span>
                                 <img class="img-profile rounded-circle"
                                     src="https://image.flaticon.com/icons/png/512/64/64096.png">
                             </a>
@@ -600,3 +600,6 @@
 </body>
 
 </html>
+<script>
+nomeUsuario();
+</script>
